首页内容更新。

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="row in_box2">
-
+    <h4><img src="{% static 'gift_platform_site/images/in-group-2.png' %}"/></h4>
 	<div class="blank30"></div>
 	<ul class="clearfix">
 		<li>公有域：5000＋供应商，10万＋产品资源，海量产品覆盖各个品类，提供更多选择。<em></em><i><img src="{% static 'gift_platform_site/images/in-box2-1.png' %}"/></i></li>
