--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -77,8 +77,8 @@
 				<img src="{% static 'gift_platform_site/images/i-3-4.png' %}"/>
 				<div class="item"><p><img src="{% static 'gift_platform_site/images/i-ico3-4.png' %}"/></p><p>安全优势</p></div>
 				<div class="words">
-					<h5>安全优势</h5>
-					<p>　　一点科技是首个通过“公有域、私有域、一键方案生成工具”帮助礼品公司实现资源在线化管理及高效为客户提供礼品方案的系统，并拥有自主知识产权。我们将通过技术以及理念的不断创新，持续推出更好的软件工具，帮助礼品公司更加便捷智能的服务终端企业客户。</p></div>
+					<h5>竞争优势</h5>
+					<p>　　一点科技聚焦于长期可持续、有比较优势、不轻易被模仿或超越的功能及技术开发，并通过技术的最简化更加灵活高效的满足客户需求，在巩固提升已有核心功能的同时，持续打造新的核心功能，不断提升自身核心竞争力，让我们的客户在行业中更具竞争优势。</p></div>
 			</li>
 			<li>
 				<img src="{% static 'gift_platform_site/images/i-3-5.png' %}"/>
