--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -75,7 +75,7 @@
 			</li>
 			<li>
 				<img src="{% static 'gift_platform_site/images/i-3-4.png' %}"/>
-				<div class="item"><p><img src="{% static 'gift_platform_site/images/i-ico3-4.png' %}"/></p><p>安全优势</p></div>
+				<div class="item"><p><img src="{% static 'gift_platform_site/images/i-ico3-4.png' %}"/></p><p>竞争优势</p></div>
 				<div class="words">
 					<h5>竞争优势</h5>
 					<p>　　一点科技聚焦于长期可持续、有比较优势、不轻易被模仿或超越的功能及技术开发，并通过技术的最简化更加灵活高效的满足客户需求，在巩固提升已有核心功能的同时，持续打造新的核心功能，不断提升自身核心竞争力，让我们的客户在行业中更具竞争优势。</p></div>
