--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -126,14 +126,31 @@
                     <input type="text" id="email" name="email" placeholder="邮箱" />
                 </div>
                 <div>
-                    {{ form.captcha }}
                 </div>
 			</div>
-			<div class="Ontrial-btn"><a href="javascript:void(0);" onclick="check()">提交</a></div>
+			<div class="Ontrial-btn">
+
+                <div style="float: left;line-height: 36px">{{ form.captcha }}</div>
+                <a href="javascript:void(0);" onclick="check()">提交</a>
+            </div>
             </form>
 		</div>
 	</div>
 </div>
+<style>
+    .captcha{
+        float:right;
+        margin-left: 10px;
+    }
+    #id_captcha_1{
+        background:#f5f5f5;
+        border-radius: 100px;
+        height: 44px;
+        line-height: 44px;
+        border: 0px;
+        padding-left: 20px;
+    }
+</style>
 
 <div class="foot">
     <div class="row">
@@ -147,6 +164,7 @@
     </div>
 </div>
 <script type="text/javascript">
+$('#id_captcha_1').attr('placeholder','请输入验证码');
 function check(){
     var checkResult = true;
 	$(".Ontrial-input input").each(function(){
@@ -181,6 +199,7 @@ function check(){
                     $('#job_position').val('');
                     $('.captcha').attr('src', result['new_cptch_image']);
                     $('#id_captcha_0').val(result['new_cptch_key'])
+                    $('#id_captcha_1').val('');
                     return;
                 } else {
                     if (result.form_errors.captcha.length > 0) {
