添加搜索的placeholder。

--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -52,7 +52,7 @@
                     <span class="tab-item select" id="product-search-tab">商品</span>
                     <span class="tab-item" id="supplier-search-tab">厂家</span>
                 </div>
-                <input type="text" id="search-content-input">
+                <input type="text" placeholder="点击搜索可以查看所有" id="search-content-input">
                 <a class="search-btn" id="search-btn">
                     搜索
                 </a>
