--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -130,11 +130,7 @@
     </div>
     <div class="copyright">
         <div>
-            <a href="#">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="{% url 'gift_platform_site:protocol' %}">帮助中心</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-                href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
-        </div>
-        <div>
-            <p>一点公司版权所有 © 2018   沪ICP备 18016054号-1</p>
+            <p>上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</p>
         </div>
     </div>
 </div>
