首页提示文案修改。

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="headtop">
-	<div class="row welcome">Hi，欢迎来到一点科技！</div>
+	<div class="row welcome">Hi，欢迎来到一点科技！^o^ </div>
 </div>
 <div class="row head">
 	<div class="logo"><img src="{% static 'gift_platform_site/images/logo_index.png' %}"/></div>
