版权文案修改。

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -159,8 +159,7 @@
 			<span>核心管理</span>
 			<span>一键生成</span>
 		</div>
-		<div class="fnav"><a href="">关于我们</a>|<a href="{% url 'gift_platform_site:protocol' %}">帮助中心</a>|<a href="">售后服务</a>|<a href="">友情链接</a></div>
-		<div class="Copyright">一点公司版权所有 © 2018   沪ICP备 18016054号-1</div>
+		<div class="Copyright">上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</div>
     </div>
 </div>
 <script type="text/javascript">
