--- a/templates/products/brand_product_list.html
+++ b/templates/products/brand_product_list.html
@@ -2,6 +2,8 @@
 {% load gift_platform_extras %}
 {% block title %}一点礼品-所有品牌{% endblock %}
 {% block content %}
+{% load static %}
+<script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
 <div class="container">
     <div class="bread-crumb">
         <a href="#">首页</a>><a href="/product/brands">品牌</a>><a href="javascript:void(0);">{{ brand.name }}</a>
@@ -114,7 +116,8 @@
 </div>
 <script>
     (function($){
-        $('.add-cart-btn').click(function(){
+        $('.add-cart-btn').click(function(event){
+            var _this= this;
             $.ajax({
                 url: '{% url "gift_platform_site:cart" %}',
                 type: 'POST',
@@ -125,10 +128,31 @@
                     'X-CSRFToken': csrftoken
                 },
                 success: function() {
+                    var offset = $(".cart").offset();
+                    flyer = $('<img class="u-flyer" src="'+$(_this).parent().parent().parent().find('.image-cover').attr('src')+'"/>');
+                    flyer.fly({
+                        start: {
+                            left: event.pageX,
+                            top: event.pageY
+                        },
+                        end: {
+                            left: offset.left,
+                            top: offset.top,
+                            width: 20,height: 20
+                        },
+                        onEnd: function () {
+                            $(flyer).remove();
+                        }
+                    });
                     refreshCart();// 更新方案车
                 }
             });
         });
     })(jQuery);
 </script>
+<style>
+    .u-flyer{
+        display: block;width: 50px;height: 50px;border-radius: 50px;position: fixed;z-index: 9999;
+    }
+</style>
 {% endblock %}
