--- a/templates/search/product_search_result.html
+++ b/templates/search/product_search_result.html
@@ -2,6 +2,8 @@
 {% load gift_platform_extras %}
 {% block title %}一点礼品-搜索结果{% endblock %}
 {% block content %}
+{% load static %}
+<script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
 <div class="container">
     <div class="bread-crumb">
         <a href="/">首页</a>><a href="javascript:void(0)">搜索结果</a>
@@ -50,7 +52,7 @@
                 {% endif %}
                 <a href="{% url "gift_platform_site:product_details" product_id=product.id %}"><img class="image-cover" src="{{ product.images.first.productimage.url }}" /></a>
                 <div class="desc-wrap">
-                    <a href="{% url "gift_platform_site:product_details" product_id=product.id %}"><div class="name">{{ product.name }}</div></a>
+                    <div class="name"><a href="{% url "gift_platform_site:product_details" product_id=product.id %}">{{ product.name }}</a><a href="javascript:void(0)" product_id={{ product.id }} class="add-cart-btn"></a></div>
                     <div class="price">市场价：￥{{ product.productItems|to_price_output }}</div>
                     <div class="price">供货价：￥{{ product.productItems|to_sell_price_output }}</div>
                 </div>
@@ -89,4 +91,45 @@
     </div>
     <div class="clear"></div>
 </div>
+    <script>
+    (function($){
+        $('.add-cart-btn').click(function(event){
+            var _this= this;
+            $.ajax({
+                url: '{% url "gift_platform_site:cart" %}',
+                type: 'POST',
+                data: {
+                    productId: $(this).attr('product_id')
+                },
+                headers: {
+                    'X-CSRFToken': csrftoken
+                },
+                success: function() {
+                    var offset = $(".cart").offset();
+                    flyer = $('<img class="u-flyer" src="'+$(_this).parent().parent().parent().find('.image-cover').attr('src')+'"/>');
+                    flyer.fly({
+                        start: {
+                            left: event.pageX,
+                            top: event.pageY
+                        },
+                        end: {
+                            left: offset.left,
+                            top: offset.top,
+                            width: 20,height: 20
+                        },
+                        onEnd: function () {
+                            $(flyer).remove();
+                        }
+                    });
+                    refreshCart();// 更新方案车
+                }
+            });
+        });
+    })(jQuery);
+</script>
+<style>
+    .u-flyer{
+        display: block;width: 50px;height: 50px;border-radius: 50px;position: fixed;z-index: 9999;
+    }
+</style>
 {% endblock %}
