--- a/templates/products/selected_product_list.html
+++ b/templates/products/selected_product_list.html
@@ -6,7 +6,7 @@
 <script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
 <div class="container">
     <div class="bread-crumb">
-        <a href="/">首页</a>><a href="javascript:void(0)">搜索结果</a>
+        <a href="/">首页</a>><a href="javascript:void(0)">精选专题</a>
     </div>
     <div class="query-area">
         <div class="query-item-wrap">
