--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -18,21 +18,21 @@
 <div class="footer1">
     <div class="container">
         <div class="item-wrap">
-            <div class="footer-icon-group1">
-                <img src="{% static 'gift_platform_site/images/footer_icon_1t.png' %}">
-                <span>物流送货上门</span>
+            <div class="footer-icon-group">
+                <img src="{% static 'gift_platform_site/images/f-ico-1.png' %}">
+                <span>海量选择</span>
             </div>
         </div>
         <div class="item-wrap">
-            <div class="footer-icon-group1">
-                <img src="{% static 'gift_platform_site/images/footer_icon_2t.png' %}">
-                <span>正规渠道进货</span>
+            <div class="footer-icon-group">
+                <img src="{% static 'gift_platform_site/images/f-ico-2.png' %}">
+                <span>核心管理</span>
             </div>
         </div>
         <div class="item-wrap">
-            <div class="footer-icon-group1">
-                <img src="{% static 'gift_platform_site/images/footer_icon_3t.png' %}">
-                <span>商品品质保证</span>
+            <div class="footer-icon-group">
+                <img src="{% static 'gift_platform_site/images/f-ico-3.png' %}">
+                <span>一键生成</span>
             </div>
         </div>
     </div>
