--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -108,23 +108,23 @@
 {% block content %}
 {% endblock %}
 <div class="footer">
-    <div class="container">
+     <div class="container">
         <div class="item-wrap">
             <div class="footer-icon-group">
-                <img src="{% static 'gift_platform_site/images/footer_icon_1.png' %}">
-                <span>物流送货上门</span>
+                <img src="{% static 'gift_platform_site/images/f-ico-1.png' %}">
+                <span>海量选择</span>
             </div>
         </div>
         <div class="item-wrap">
             <div class="footer-icon-group">
-                <img src="{% static 'gift_platform_site/images/footer_icon_2.png' %}">
-                <span>正规渠道进货</span>
+                <img src="{% static 'gift_platform_site/images/f-ico-2.png' %}">
+                <span>核心管理</span>
             </div>
         </div>
         <div class="item-wrap">
             <div class="footer-icon-group">
-                <img src="{% static 'gift_platform_site/images/footer_icon_3.png' %}">
-                <span>商品品质保证</span>
+                <img src="{% static 'gift_platform_site/images/f-ico-3.png' %}">
+                <span>一键生成</span>
             </div>
         </div>
     </div>
