--- a/templates/sign/register1.html
+++ b/templates/sign/register1.html
@@ -27,33 +27,30 @@
     <div class="choose2"><div><a href="{% url 'gift_platform_site:reg2' %}?type=2">礼品公司</a></div></div>
 </div>
 <hr class="hrline3"/>
-<div class="footer1">
+<div class="footer">
     <div class="container">
         <div class="item-wrap">
-            <div class="footer-icon-group1">
-                <img src="{% static 'gift_platform_site/images/footer_icon_1t.png'%}">
-                <span>物流送货上门</span>
+            <div class="footer-icon-group">
+                <img src="{% static 'gift_platform_site/images/f-ico-1.png' %}">
+                <span>海量选择</span>
             </div>
         </div>
         <div class="item-wrap">
-            <div class="footer-icon-group1">
-                <img src="{% static 'gift_platform_site/images/footer_icon_2t.png'%}">
-                <span>正规渠道进货</span>
+            <div class="footer-icon-group">
+                <img src="{% static 'gift_platform_site/images/f-ico-2.png' %}">
+                <span>核心管理</span>
             </div>
         </div>
         <div class="item-wrap">
-            <div class="footer-icon-group1">
-                <img src="{% static 'gift_platform_site/images/footer_icon_3t.png'%}">
-                <span>商品品质保证</span>
+            <div class="footer-icon-group">
+                <img src="{% static 'gift_platform_site/images/f-ico-3.png' %}">
+                <span>一键生成</span>
             </div>
         </div>
     </div>
-    <div class="copyright1">
+    <div class="copyright">
         <div>
-            <a href="#">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">帮助中心</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
-        </div>
-        <div>
-            <p>一点公司版权所有 © 1997-2018   沪ICP备 18016054号-1</p>
+            <p>上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</p>
         </div>
     </div>
 </div>
