修改登录注册页。

--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="otherdiv">
-                        <a href="{% url 'gift_platform_site:reg1' %}">免费注册</a>
+                        <a href="{% url 'gift_platform_site:reg2' %}?type=2">免费注册</a>
                         <a href="{% url 'gift_platform_site:findpwd' %}">忘记账号密码</a>
                     </div>
                     <input hidden id="shtp" value="{{ msg }}"/>
