--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div class="reg-login-wrap">
-        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo.png' %}"></a>
+        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo_index.png' %}" style="height: 55px;width:178px;"></a>
     </div>
 </div>
 <hr class="hrline"/>
