--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -45,7 +45,7 @@
 </div>
 <div class="container">
     <div class="search-head-wrap">
-        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo.png' %}"></a>
+        <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo_index.png' %}" style="height: 55px;width:178px;"></a>
         <div class="search-wrap">
             <div class="search">
                 <div class="tab">
