--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="btn-group dynamic-latest-sellout-btn-group">
         <div class="{% if t != '1' %}active{% endif %}">
-            <a href="{% url "gift_platform_site:index" %}">全部</a>
+            <a href="{% url "gift_platform_site:home" %}">全部</a>
         </div>
         <div>
             <span class="split"></span>
