统一注册链接。

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="banner">
-	<div class="row"><a href="{% url 'gift_platform_site:reg1' %}" class="go-reg">注册</a><a href="{% url 'gift_platform_site:login' %}" class="go-login">登录</a></div>
+	<div class="row"><a href="{% url 'gift_platform_site:reg2' %}?type=2" class="go-reg">注册</a><a href="{% url 'gift_platform_site:login' %}" class="go-login">登录</a></div>
 </div>
 
 <div class="in_box1">
