调整页面样式。

--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -10,12 +10,13 @@
 <div class="container">
     <div class="reg-login-wrap">
         <a href="/home"><img class="logo" src="{%  static 'gift_platform_site/images/logo_index.png' %}" style="height: 55px;width:178px;"></a>
+        <div class="tell">400-679-8289</div>
     </div>
 </div>
 <hr class="hrline"/>
 {% block content %}
 {% endblock %}
-<div class="footer1">
+<div class="footer">
     <div class="container">
         <div class="item-wrap">
             <div class="footer-icon-group">
@@ -36,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div class="copyright1">
+    <div class="copyright">
         <div>
             <p>上海简象网络科技有限公司 © 2018   沪ICP备 18016054号-1</p>
         </div>
