--- a/templates/inforcenter/msgdetail.html
+++ b/templates/inforcenter/msgdetail.html
@@ -7,7 +7,7 @@
     <div class="nocurrentstep">{{ msgobj.title }}</div>
 </div>
 <hr class="hrline2"/>
-<div class="container">
+<div class="container"  style="min-height: calc(100vh - 503px);">
 <div class="pc">{{ msgobj.content }}</div>
 </div>
 {% endblock %}
