--- a/templates/products/brands_list.html
+++ b/templates/products/brands_list.html
@@ -1,7 +1,7 @@
 {% extends "share/base_layout_with_search.html" %}
 {% block title %}一点礼品-所有品牌{% endblock %}
 {% block content %}
-<div class="container brand-list">
+<div class="container brand-list"  style="min-height: calc(100vh - 503px);">
     {% for brand in brands_list %}
     <div class="brand-list-item">
         <div class="brand-logo-wrap">
