--- a/templates/products/selected_product_list.html
+++ b/templates/products/selected_product_list.html
@@ -4,7 +4,7 @@
 {% block content %}
 {% load static %}
 <script src="{% static "gift_platform_site/js/jquery.fly.min.js" %}"></script>
-<div class="container">
+<div class="container"  style="min-height: calc(100vh - 503px);">
     <div class="bread-crumb">
         <a href="/">首页</a>><a href="javascript:void(0)">精选专题</a>
     </div>
