--- a/templates/share/base_layout.html
+++ b/templates/share/base_layout.html
@@ -16,7 +16,7 @@
 <hr class="hrline"/>
 {% block content %}
 {% endblock %}
-<div class="footer">
+<div class="footer" style="position:absolute;width:100%;bottom:0px;">
     <div class="container">
         <div class="item-wrap">
             <div class="footer-icon-group">
