--- a/templates/share/base_layout_reg.html
+++ b/templates/share/base_layout_reg.html
@@ -20,7 +20,7 @@
 
 {% endblock %}
 <hr class="hrline2"/>
-<div class="footer">
+<div class="footer" style="position:absolute;width:100%;bottom:0px;">
     <div class="container">
         <div class="item-wrap">
             <div class="footer-icon-group">
