--- a/templates/inforcenter/msgcenter.html
+++ b/templates/inforcenter/msgcenter.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% load static %}
 
-    <div class="container">
+    <div class="container"  style="min-height: calc(100vh - 503px);">
         <table class="msgcentertable">
             <tr>
                 <th>序号</th>
